samples/_failures_safe/1761407596_cc7039_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9b6d313d.c: In function ‘main’:
./samples/SAFE/__tmp_9b6d313d.c:157:5: error: expected expression at end of input
  157 |     if (len >
      |     ^~
./samples/SAFE/__tmp_9b6d313d.c:157:5: error: expected declaration or statement at end of input
